--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ a {
 .promo {
   background-image: url(../img/promo.png);
   background-position: center;
+  background-repeat: no-repeat;
   height: 766px;
 }
 .promo-box {
@@ -108,6 +109,7 @@ a {
   line-height: 1.57;
   margin-top: 15px;
   margin-left: 10px;
+  
 }
 .block1 {
   filter: drop-shadow(-16px 21px 40px rgba(0, 209, 255, 0.35));
